# pytorch_extension_example

./: README.md  benchmark.py  requirements.txt  setup.py
ops/: CMakeLists.txt  pybind.cpp
ops/include/: cpp_helper.hpp  cuda_helper.hpp  device_registry.hpp  ncrelu.hpp  relu.hpp
ops/ncrelu/: ncrelu.cpp  ncrelu_cpu.cpp  ncrelu_cuda.cu
ops/relu/: relu.cpp  relu_cpu.cpp  relu_cuda.cu
